--- a/index.html
+++ b/index.html
@@ -4,12 +4,30 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Question</title>
-	<link href="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.js"/>
+	<link rel="stylesheet" tyoe="text/css" href="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.css"/>
 	<link rel="stylesheet" type="text/css" href="./design.css">
 </head>
 <body>
+	<div class="row fullWidth">
+		<div class="large-12 columns text-center callout">
+			<h2>Question</h2>
+		</div>
+	</div>
+	<div class="row">
+		<div class="small-4 columns">
+		
+		</div>
 
-<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.js"></script>
+		<div class="small-8 columns text-center callout">
+			<p>What is Array??</p>
+		</div>
+	</div>
+	<div class="row">
+
+	</div>
+
+
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.js"></script>
 </body>
 </html>
