made rough design

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Question</title>
-	<link rel="stylesheet" tyoe="text/css" href="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.css"/>
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.css"/>
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./design.css">
 </head>
 <body>
@@ -14,18 +15,41 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="small-4 columns">
-		
+		<div class="small-1 columns text-center">
+			<i class="fa fa-user fa-4x" aria-hidden="true"></i>
 		</div>
 
-		<div class="small-8 columns text-center callout">
+		<div class="small-11 columns text-center callout">
 			<p>What is Array??</p>
 		</div>
 	</div>
 	<div class="row">
+		<div class="small-11 columns text-center callout">
+			<p>An array  is actually an ordered map. A map is a type that associates values to keys. This type is optimized for several different uses; it can be treated as an array, list (vector), hash table (an implementation of a map), dictionary, collection, stack, queue, and probably more. As array values can be other arrays, trees and multidimensional arrays are also possible.</p>
+		</div>
 
+		<div class="small-1 columns text-center">
+			<i class="fa fa-user fa-4x" aria-hidden="true"></i>
+		</div>
 	</div>
+	<div class="row">
+		<div class="small-1 columns text-center">
+			<i class="fa fa-user fa-4x" aria-hidden="true"></i>
+		</div>
 
+		<div class="small-11 columns text-center callout">
+			<p>Thanks :D</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="small-11 columns text-center callout">
+			<p>An array  is actually an ordered map. A map is a type that associates values to keys. This type is optimized for several different uses; it can be treated as an array, list (vector), hash table (an implementation of a map), dictionary, collection, stack, queue, and probably more. As array values can be other arrays, trees and multidimensional arrays are also possible.</p>
+		</div>
+
+		<div class="small-1 columns text-center">
+			<i class="fa fa-user fa-4x" aria-hidden="true"></i>
+		</div>
+	</div>
 
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.js"></script>
