added more designs

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div class="row fullWidth">
-		<div class="large-12 columns text-center callout">
+		<div class="large-12 columns text-center">
 			<h2>Question</h2>
 		</div>
 	</div>
@@ -19,7 +19,7 @@
 			<i class="fa fa-user fa-4x" aria-hidden="true"></i>
 		</div>
 
-		<div class="small-11 columns text-center callout">
+		<div class="small-11 columns text-center callout question">
 			<p>What is Array??</p>
 		</div>
 	</div>
