added more mobile friendy design

--- a/index.html
+++ b/index.html
@@ -15,39 +15,43 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="small-1 columns text-center">
-			<i class="fa fa-user fa-4x" aria-hidden="true"></i>
-		</div>
+		<div class="small-10 medium-7 small-centered columns">
+			<div class="row">
+				<div class="small-3 medium-2 columns text-center">
+					<i class="fa fa-user fa-4x" aria-hidden="true"></i>
+				</div>
 
-		<div class="small-11 columns text-center callout question">
-			<p>What is Array??</p>
-		</div>
-	</div>
-	<div class="row">
-		<div class="small-11 columns text-center callout">
-			<p>An array  is actually an ordered map. A map is a type that associates values to keys. This type is optimized for several different uses; it can be treated as an array, list (vector), hash table (an implementation of a map), dictionary, collection, stack, queue, and probably more. As array values can be other arrays, trees and multidimensional arrays are also possible.</p>
-		</div>
+				<div class="small-9 medium-10 columns text-center callout question">
+					<p>What is Array??</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="small-9 medium-10 columns text-center callout">
+					<p>An array  is actually an ordered map. A map is a type that associates values to keys. This type is optimized for several different uses; it can be treated as an array, list (vector), hash table (an implementation of a map), dictionary, collection, stack, queue, and probably more. As array values can be other arrays, trees and multidimensional arrays are also possible.</p>
+				</div>
 
-		<div class="small-1 columns text-center">
-			<i class="fa fa-user fa-4x" aria-hidden="true"></i>
-		</div>
-	</div>
-	<div class="row">
-		<div class="small-1 columns text-center">
-			<i class="fa fa-user fa-4x" aria-hidden="true"></i>
-		</div>
+				<div class="small-3 medium-2 columns text-center">
+					<i class="fa fa-user fa-4x" aria-hidden="true"></i>
+				</div>
+			</div>
+			<div class="row">
+				<div class="small-3 medium-2 columns text-center">
+					<i class="fa fa-user fa-4x" aria-hidden="true"></i>
+				</div>
 
-		<div class="small-11 columns text-center callout">
-			<p>Thanks :D</p>
-		</div>
-	</div>
-	<div class="row">
-		<div class="small-11 columns text-center callout">
-			<p>An array  is actually an ordered map. A map is a type that associates values to keys. This type is optimized for several different uses; it can be treated as an array, list (vector), hash table (an implementation of a map), dictionary, collection, stack, queue, and probably more. As array values can be other arrays, trees and multidimensional arrays are also possible.</p>
-		</div>
+				<div class="small-9 medium-10 columns text-center callout">
+					<p>Thanks :D</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="small-9 medium-10 columns text-center callout">
+					<p>An array  is actually an ordered map. A map is a type that associates values to keys. This type is optimized for several different uses; it can be treated as an array, list (vector), hash table (an implementation of a map), dictionary, collection, stack, queue, and probably more. As array values can be other arrays, trees and multidimensional arrays are also possible.</p>
+				</div>
 
-		<div class="small-1 columns text-center">
-			<i class="fa fa-user fa-4x" aria-hidden="true"></i>
+				<div class="small-3 medium-2 columns text-center">
+					<i class="fa fa-user fa-4x" aria-hidden="true"></i>
+				</div>
+			</div>
 		</div>
 	</div>
 
