added more info

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				</div>
 
 				<div class="small-9 medium-10 columns user-title">
-					<p>Question By Rabin</p>
+					<p>Question By Rabin 15 minutes ago</p>
 				</div>
 				<div class="small-9 medium-10 columns text-center callout question">
 					<p>What is Array??</p>
@@ -31,8 +31,8 @@
 			</div>
 			<hr>
 			<div class="row">
-				<div class="small-9 medium-10 columns user-title text-right">
-					<p>Reply By Hari</p>
+				<div class="small-9 medium-10 columns user-title">
+					<p>Reply By Hari 12 minutes ago</p>
 				</div>
 				<div class="small-9 medium-10 columns text-center callout">
 					<p>An array  is actually an ordered map. A map is a type that associates values to keys. This type is optimized for several different uses; it can be treated as an array, list (vector), hash table (an implementation of a map), dictionary, collection, stack, queue, and probably more. As array values can be other arrays, trees and multidimensional arrays are also possible.</p>
@@ -48,15 +48,15 @@
 				</div>
 
 				<div class="small-9 medium-10 columns user-title">
-					<p>Reply By Rabin</p>
+					<p>Reply By Rabin 10 minutes ago</p>
 				</div>
 				<div class="small-9 medium-10 columns text-center callout">
 					<p>Thanks :D</p>
 				</div>
 			</div>
 			<div class="row">
-				<div class="small-9 medium-10 columns user-title text-right">
-					<p>Reply By Rabin</p>
+				<div class="small-9 medium-10 columns user-title">
+					<p>Reply By Shyam 5 minutes ago</p>
 				</div>
 				<div class="small-9 medium-10 columns text-center callout">
 					<p>An array  is actually an ordered map. A map is a type that associates values to keys. This type is optimized for several different uses; it can be treated as an array, list (vector), hash table (an implementation of a map), dictionary, collection, stack, queue, and probably more. As array values can be other arrays, trees and multidimensional arrays are also possible.</p>
